--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "glove_embeddings2 = KeyedVectors.load_word2vec_format(\n",
+    "    '/Users/vaibhav/MiscProjects/word-vectors/glove.6B/glove.6B.300d.w2v.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +210,7 @@
        "4  Can you elaborate on the 3-400bps of margin im...  Financials         1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +363,7 @@
        "4       4              0           0             1          0           0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -3721,7 +3733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -3743,7 +3755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -3755,7 +3767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -3765,7 +3777,7 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "['iheartmedia', 'lnstagram', 'hipchat', 'zendesk', 'ringcentrai', 'defensibility', 'upwork', 'xpresswest', 'twilio', 'docusign']\n"
+      "['defensibility', 'lnstagram', 'upwork', 'zendesk', 'iheartmedia', 'docusign', 'hipchat', 'ringcentrai', 'xpresswest', 'twilio']\n"
      ]
     }
    ],
@@ -3788,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -3799,7 +3811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -3817,7 +3829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -3842,7 +3854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -3854,7 +3866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -3865,7 +3877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -3930,14 +3942,14 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>325</td>\n",
-       "      <td>51</td>\n",
-       "      <td>197</td>\n",
-       "      <td>863</td>\n",
-       "      <td>1005</td>\n",
-       "      <td>263</td>\n",
-       "      <td>476</td>\n",
-       "      <td>592</td>\n",
+       "      <td>1081</td>\n",
+       "      <td>938</td>\n",
+       "      <td>1109</td>\n",
+       "      <td>586</td>\n",
+       "      <td>484</td>\n",
+       "      <td>359</td>\n",
+       "      <td>1006</td>\n",
+       "      <td>553</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3955,13 +3967,13 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>324</td>\n",
-       "      <td>701</td>\n",
-       "      <td>51</td>\n",
-       "      <td>592</td>\n",
-       "      <td>334</td>\n",
-       "      <td>557</td>\n",
-       "      <td>857</td>\n",
+       "      <td>1035</td>\n",
+       "      <td>472</td>\n",
+       "      <td>938</td>\n",
+       "      <td>553</td>\n",
+       "      <td>247</td>\n",
+       "      <td>285</td>\n",
+       "      <td>1089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3976,16 +3988,16 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>940</td>\n",
-       "      <td>845</td>\n",
-       "      <td>685</td>\n",
-       "      <td>852</td>\n",
-       "      <td>910</td>\n",
-       "      <td>193</td>\n",
-       "      <td>423</td>\n",
-       "      <td>561</td>\n",
-       "      <td>421</td>\n",
-       "      <td>857</td>\n",
+       "      <td>646</td>\n",
+       "      <td>1043</td>\n",
+       "      <td>533</td>\n",
+       "      <td>1042</td>\n",
+       "      <td>377</td>\n",
+       "      <td>307</td>\n",
+       "      <td>353</td>\n",
+       "      <td>516</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1089</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4003,15 +4015,15 @@
        "1       1              0           0             0          0           1  0   \n",
        "2       2              0           0             1          0           0  0   \n",
        "\n",
-       "   ...   18   19   20   21   22   23    24   25   26   27  \n",
-       "0  ...    0    0  325   51  197  863  1005  263  476  592  \n",
-       "1  ...    0    0    0  324  701   51   592  334  557  857  \n",
-       "2  ...  940  845  685  852  910  193   423  561  421  857  \n",
+       "   ...   18    19    20    21    22   23   24   25    26    27  \n",
+       "0  ...    0     0  1081   938  1109  586  484  359  1006   553  \n",
+       "1  ...    0     0     0  1035   472  938  553  247   285  1089  \n",
+       "2  ...  646  1043   533  1042   377  307  353  516   100  1089  \n",
        "\n",
        "[3 rows x 37 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4068,7 +4080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -4089,7 +4101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -4101,7 +4113,7 @@
        "       dtype=object), array([25, 25, 25, 25, 25]))"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4112,7 +4124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -4124,7 +4136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -4136,7 +4148,7 @@
        "       dtype=object), array([80, 80, 80, 81, 80]))"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4652,6 +4664,124 @@
    "source": [
     "pickle.dump(data_df2_tr3, open(base_dir + 'data_df2_tr3.pkl', 'wb'))\n",
     "pickle.dump(data_df2_ts3, open(base_dir + 'data_df2_ts3.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# get glove vector mean etc.\n",
+    "# p-means for glove embeddings\n",
+    "glove_sent_emb_mean = np.zeros((len(clean_docs), 50))\n",
+    "for i, doc in enumerate(clean_docs):\n",
+    "    sent_emb = np.zeros((50, ), dtype='float')\n",
+    "    j = 0\n",
+    "    for token in doc:\n",
+    "        try:\n",
+    "            sent_emb += glove_embeddings[token.lower()]\n",
+    "            j += 1\n",
+    "        except:\n",
+    "            pass\n",
+    "    if j > 0:\n",
+    "        sent_emb /= j   \n",
+    "    glove_sent_emb_mean[i] = sent_emb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "glove_sent_emb_mean_df = pd.DataFrame(data=glove_sent_emb_mean)\n",
+    "glove_sent_emb_mean_df['row_id'] = glove_sent_emb_mean_df.reset_index().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_df2_tr4 = pd.merge(data_df2_tr, glove_sent_emb_mean_df, \n",
+    "                        left_on='row_id', right_on='row_id',\n",
+    "                        how = 'left',\n",
+    "                        suffixes=('_l', '_r'))\n",
+    "\n",
+    "data_df2_ts4 = pd.merge(data_df2_ts, glove_sent_emb_mean_df, \n",
+    "                        left_on='row_id', right_on='row_id',\n",
+    "                        how = 'left',\n",
+    "                        suffixes=('_l', '_r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pickle.dump(data_df2_tr4, open(base_dir + 'data_df2_tr4.pkl', 'wb'))\n",
+    "pickle.dump(data_df2_ts4, open(base_dir + 'data_df2_ts4.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# get glove vector mean etc. - 300d\n",
+    "# p-means for glove embeddings\n",
+    "glove_sent_emb_mean = np.zeros((len(clean_docs), 300))\n",
+    "for i, doc in enumerate(clean_docs):\n",
+    "    sent_emb = np.zeros((300, ), dtype='float')\n",
+    "    j = 0\n",
+    "    for token in doc:\n",
+    "        try:\n",
+    "            sent_emb += glove_embeddings2[token.lower()]\n",
+    "            j += 1\n",
+    "        except:\n",
+    "            pass\n",
+    "    if j > 0:\n",
+    "        sent_emb /= j   \n",
+    "    glove_sent_emb_mean[i] = sent_emb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "glove_sent_emb_mean_df = pd.DataFrame(data=glove_sent_emb_mean)\n",
+    "glove_sent_emb_mean_df['row_id'] = glove_sent_emb_mean_df.reset_index().index\n",
+    "\n",
+    "data_df2_tr5 = pd.merge(data_df2_tr, glove_sent_emb_mean_df, \n",
+    "                        left_on='row_id', right_on='row_id',\n",
+    "                        how = 'left',\n",
+    "                        suffixes=('_l', '_r'))\n",
+    "\n",
+    "data_df2_ts5 = pd.merge(data_df2_ts, glove_sent_emb_mean_df, \n",
+    "                        left_on='row_id', right_on='row_id',\n",
+    "                        how = 'left',\n",
+    "                        suffixes=('_l', '_r'))\n",
+    "\n",
+    "pickle.dump(data_df2_tr5, open(base_dir + 'data_df2_tr5.pkl', 'wb'))\n",
+    "pickle.dump(data_df2_ts5, open(base_dir + 'data_df2_ts5.pkl', 'wb'))"
    ]
   }
  ],
